--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <div class="intro-info">
         <h2 style="font-size: 30px;">SEED<span style="font-weight: 400">CODE</h2>
-        <h2 class="">A One Stop Solution For All Your Software Development</h2>
+        <h2 class="">The All-Encompassing Solution For Your Software Development</h2>
         <p class="">Build your startup — get funding for your software development, recruit a team overseas, and
           build a product, service, & experience
           customers love.</p>
@@ -103,17 +103,17 @@
 
           <div class="col-lg-6 content order-lg-1 order-2">
             <p>
-              Rapid innovation is an essential feature of digital information technology.SeedCode understands the
-              importance of remaining current through frequent self-reinvention. We accomplish this by continually
-              attracting the brightest minds in modern digital paradigms and platforms. By maintaining a roster of
-              skilled technology professionals across every business function, SeedCode distinguishes itself by offering
-              its client organizations a single touchpoint to address all of their enterprise technology needs.
+              Digital information technology requires rapid innovation to succeed. SeedCode understands the significance
+              of remaining current through constant self-reinvention. We continually attract the brightest minds in
+              contemporary digital platforms and paradigms, utilizing an elite team of technology professionals across
+              each business function. As a top-tier employer, SeedCode values employee ownership, professional
+              fulfillment and job satisfaction.
             </p>
             <p>
-              SeedCode aspires to enhance the productivity and growth of organizations around the world with a
-              comprehensive range of digital solutions and services. As a top-tier employer, SeedCode promotes employee
-              ownership, leadership, professional fulfillment, and job satisfaction. We deliver profitability and
-              business success to our global clients through precise execution and technical excellence.
+              Distinguished by our capacity to address all of our global client’s enterprise technology demands at a
+              singular touchpoint, SeedCode delivers profitability and business success - through precision, technical
+              excellence and all-encompassing digital solutions. We aspire to augment the growth and productivity of
+              organizations around the world.
             </p>
 
             <!-- 
@@ -171,9 +171,9 @@
         </header>
         <h4 class="h4"> Our Latest Project</h4>
         <p class="portfolio-highlight">
-          <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. -->
+          We developed a singular application for Samba Bank customers and non-customers alike, with an array of
+          features designed to
+          facilitate streamlined, on-the-go banking - available on iOS and Android.
         </p>
         <button class="btn ph-btn" type="button" data-toggle="collapse" data-target="#collapseExample"
           aria-expanded="false" aria-controls="collapseExample">
@@ -371,7 +371,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn">
             <div class="member">
-              <img src="img/team-2.jpeg" class="img-fluid" alt="">
+              <img src="img/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Drew Stone</h4>
