content & collab logos

--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
 
   <main id="main">
 
+    <div class="container-fluid">
+      <img src="img/collab.jpg" alt="In Collaboration With Logos" class="img-fluid wow fadeIn collab-img">
+    </div>
+
     <!--==========================
       About Us Section
     ============================-->
@@ -96,7 +100,6 @@
 
         <header class="section-header">
           <h3>About Us</h3>
-
         </header>
 
         <div class="row about-container align-items-center py-5">
@@ -352,9 +355,10 @@
                   <span>Founder, Chief Executive Officer</span>
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
-                    B.A. in Physics @ UPENN <br />
-                    B.S.E. in Electrical Engineering @ UPENN <br />
                     Masters in Systems Engineering @ UPENN <br />
+                    B.S.E. in Electrical Engineering @ UPENN <br />
+                    B.A. in Physics @ UPENN <br />
+
 
                     <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
                     General Partner @ Providus Ventures and Providus Capital <br />
@@ -362,7 +366,7 @@
 
                   <div class="social">
                     <a href="https://www.linkedin.com/in/rabeeljawaid/" target="_blank"><i
-                        class="fa fa-linkedin"></i></a>
+                        class="fab fa-linkedin-in"></i></a>
                   </div>
                 </div>
               </div>
@@ -379,16 +383,18 @@
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
                     Founder @ BaireGroup <br />
-                    B.S.E in Networks Engineering @ UPENN <br />
                     Masters in Math @ UPENN <br />
+                    B.S.E in Networks Engineering @ UPENN <br />
+
 
                     <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
                     Founder @ Commonwealth Labs<br />
                     Candidate for PhD in Computer Science @ HBU
                   </p>
                   <div class="social">
-                    <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i class="fa fa-linkedin"></i></a>
-                    <a href="https://github.com/drewstone/" target="_blank"><i class="fa fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/drewcstone/" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/drewstone/" target="_blank"><i class="fab fa-github"></i></a>
                   </div>
                 </div>
               </div>
@@ -404,16 +410,17 @@
                   <span>VP, Engineering</span>
                   <p>
                     <span style="font-weight: 600; font-style: normal;">Previously</span>
-                    B.A. in Computer Science @ UC Berkeley <br />
-                    SWE Lead @ Tarjimly, Y Combinator W'18
+                    SWE Lead @ Tarjimly, Y Combinator W'18 <br />
+                    B.A. in Computer Science @ UC Berkeley
 
                     <span style="font-weight: 600; font-style: normal; margin-top: 10px;">Currently</span>
-                    General Partner @ Providus Ventures <br /> General Partner @ Vitality Capital <br />
+                    SWE @ Incorta <br />
+                    General Partner @ Providus Ventures
                   </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/ahmad-jawaid/" target="_blank"><i
-                        class="fa fa-linkedin"></i></a>
-                    <a href="https://github.com/Ahmadjawaid" target="_blank"><i class="fa fa-github"></i></a>
+                        class="fab fa-linkedin-in"></i></a>
+                    <a href="https://github.com/Ahmadjawaid" target="_blank"><i class="fab fa-github"></i></a>
                   </div>
                 </div>
               </div>
@@ -423,7 +430,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
             <div class="member">
-              <img src="img/team-4.jpeg" class="img-fluid" alt="">
+              <img src="img/team-4.1.jpeg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Zabi Mohebzada</h4>
@@ -440,7 +447,7 @@
                   </p>
                   <div class="social">
                     <a href="https://www.linkedin.com/in/zabi-mohebzada-59008811b/" target="_blank"><i
-                        class="fa fa-linkedin"></i></a>
+                        class="fab fa-linkedin-in"></i></a>
                   </div>
                 </div>
               </div>
