portfolio content updates

--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/app1.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-info-header">
-                  <span>App 1</span> <a href="img/portfolio/app1.jpg" class="link-preview" data-lightbox="portfolio"
+                  <span>App 1</span> <a href="img/portfolio/app1.jpeg" class="link-preview" data-lightbox="portfolio"
                     data-title="App 1" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -226,12 +226,32 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-info-header">
-                  <span>Web 3</span> <a href="img/portfolio/web3.jpg" class="link-preview" data-lightbox="portfolio"
+                  <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </p> -->
+                <div>
+                  <button class="btn preview-btn">Request Demo</button>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
+            <div class="portfolio-wrap">
+              <img src="img/portfolio/web3.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-info-header">
+                  <span>Web 3</span> <a href="img/portfolio/web3.jpeg" class="link-preview" data-lightbox="portfolio"
                     data-title="Web 3" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -270,10 +290,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/web2.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-info-header">
-                  <span>Web 2</span> <a href="img/portfolio/web2.jpg" class="link-preview" data-lightbox="portfolio"
+                  <span>Web 2</span> <a href="img/portfolio/web2.jpeg" class="link-preview" data-lightbox="portfolio"
                     data-title="Web 2" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -293,10 +313,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/app3.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-info-header">
-                  <span>App 3</span> <a href="img/portfolio/app3.jpg" class="link-preview" data-lightbox="portfolio"
+                  <span>App 3</span> <a href="img/portfolio/app3.jpeg" class="link-preview" data-lightbox="portfolio"
                     data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
@@ -310,23 +330,7 @@
 
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
-                    data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
-                </div>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. </p> -->
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
-                </div>
 
-              </div>
-            </div>
-          </div>
 
         </div>
 
