--- a/index.html
+++ b/index.html
@@ -206,45 +206,88 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app">
-            <div class="portfolio-wrap">
-              <img src="img/portfolio/app1.jpeg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <div class="portfolio-info-header">
-                  <span>App 1</span> <a href="img/portfolio/app1.jpeg" class="link-preview" data-lightbox="portfolio"
-                    data-title="App 1" title="Preview"><i class="fa fa-expand"></i></a>
+            <a class="" data-toggle="modal" data-target="#app1">
+              <div class="portfolio-wrap">
+                <img src="img/portfolio/app1.jpeg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <span>App 1</span>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
                 </div>
-                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat.</p>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                  labore
-                  et dolore magna aliqua. </p> -->
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
+              </div>
+          </div>
+          </a>
+
+          <div class="modal fade" id="app1" tabindex="-1" role="dialog" aria-labelledby="app1" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-body">
+                  <div class="row align-items-center">
+                    <div id="carouselExampleControls" class="col-lg-6 carousel slide" data-ride="carousel">
+                      <div class="carousel-inner">
+                        <div class="carousel-item active">
+                          <img src="img/portfolio/web1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/portfolio/web2.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                          <img src="img/portfolio/app1.jpeg" class="d-block w-100" alt="...">
+                        </div>
+                      </div>
+                      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
+                    <div class="col-lg-6 px-4">
+                      <h4>App 1</h4>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi
+                        ut
+                        aliquip ex ea commodo consequat.</p>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                        nisi
+                        ut
+                        aliquip ex ea commodo consequat.
+                      </p>
+                      <div>
+                        <button class="btn preview-btn">Request Demo</button>
+                      </div>
+
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
+
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
+              <img src="img/portfolio/app3.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-info-header">
-                  <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
-                    data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
+                  <span>App 3</span> <a href="img/portfolio/app3.jpeg" class="link-preview" data-lightbox="portfolio"
+                    data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. </p> -->
-                <div>
-                  <button class="btn preview-btn">Request Demo</button>
-                </div>
 
               </div>
             </div>
           </div>
-
-
 
           <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
@@ -286,8 +329,6 @@
             </div>
           </div>
 
-
-
           <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/web2.jpeg" class="img-fluid" alt="">
@@ -311,26 +352,41 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
-              <img src="img/portfolio/app3.jpeg" class="img-fluid" alt="">
+              <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <div class="portfolio-info-header">
-                  <span>App 3</span> <a href="img/portfolio/app3.jpeg" class="link-preview" data-lightbox="portfolio"
-                    data-title="App 3" title="Preview"><i class="fa fa-expand"></i></a>
+                  <span>Web 1</span> <a href="img/portfolio/web1.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="Web 1" title="Preview"><i class="fa fa-expand"></i></a>
                 </div>
                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. </p> -->
                 <div>
                   <button class="btn preview-btn">Request Demo</button>
                 </div>
+
               </div>
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item wow fadeIn filter-web" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <img src="img/portfolio/app4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <div class="portfolio-info-header">
+                  <span>App 4</span> <a href="img/portfolio/app4.jpg" class="link-preview" data-lightbox="portfolio"
+                    data-title="App 4" title="Preview"><i class="fa fa-expand"></i></a>
+                </div>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </p> -->
+                <div>
+                  <button class="btn preview-btn">Request Demo</button>
+                </div>
 
-
-
+              </div>
+            </div>
+          </div>
 
         </div>
 
