--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
             </p>
             <p>
               Distinguished by our capacity to address all of our global client’s enterprise technology demands at a
-              singular touchpoint, SeedCode delivers profitability and business success - through precision, technical
-              excellence and all-encompassing digital solutions. We aspire to augment the growth and productivity of
+              singular touchpoint, SeedCode delivers profitability and business success - through precise execution,
+              technical excellence and all-encompassing digital solutions. We aspire to augment the growth and
+              productivity of
               organizations around the world.
             </p>
 
